tests/stderr-snapshots/integration__integration__mapfiles__intrinsic_without_signature.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: opcode 999 is an intrinsic but has no signature
  ┌─ <mapfile-1>:3:5
  │
3 │ 999 Jmp()
  │     ^^^^^ defined as an intrinsic here


